k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: small-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: small-project
  template:
    metadata:
      labels:
        app: small-project
    spec:
      containers:
      - name: small-project
        image: balu361988/small-project:latest  # This will be replaced by Jenkins during the pipeline
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: small-project-service
spec:
  type: NodePort
  selector:
    app: small-project
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
